--- a/w09/index.html
+++ b/w09/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>戒賭</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="icomoon/style.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="phonegap.js"></script>
@@ -14,10 +14,10 @@
 	<div class="container">
 		<a href="mainpage.html">
 		<div class="clearfix bshadow0 pbs">
-				<span class="icon-gambler"></span><span class="mls"></span>
+			<span class="icon-gambler"></span>
+			<span class="mls"></span>
 		</div>
 		</a>
 	</div>
-	
 </body>
 </html>
