--- a/w09/secondpage.html
+++ b/w09/secondpage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>戒賭</title>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="icomoon/style.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
